--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Weather App",
   "main": "./js/scripts.js",
   "scripts": {
-    "build": "node ./node_modules/sass/sass.js ./css"
+    "build": "node ./node_modules/sass/sass.js ./css",
+    "watch": "node ./node_modules/sass/sass.js ./css -w"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,6 @@
   },
   "homepage": "https://github.com/sunnysunny77/bom#readme",
   "dependencies": {
-    "sass": "^1.34.0"
+    "sass": "latest"
   }
 }
