--- a/site/manifest.json
+++ b/site/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Template",
-    "short_name": "Template",
+    "name": "Weather",
+    "short_name": "Weather",
     "start_url": ".",
     "background_color": "#FFC0CB",
     "theme_color": "#FFC0CB",
