--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 node_modules
 package-lock.json
+certs/server.csr
+certs/server.key
+certs/server.crt
+certs/ca.crt
+certs/ca.key
+certs/ca.srl
+conf/cert.conf
+conf/csr.conf
+conf/ca.conf
+site/css/app.min.css
+site/css/app.min.css.map
+site/js/app.min.js
+site/js/app.min.js.map
